<resources>
    <string name="app_name">Movie UI/UX</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="account_mail">alanikika26@gmail.com</string>
    <string name="account_name">Alanikika Pratyaksa</string>
    <string name="account_phone">085691919954</string>

    <!--Title Bar-->
    <string name="home">Home</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_lead">Movie Lead</string>
    <string name="movie_date">Release Date</string>
    <string name="hint_tittle">Tittle</string>
    <string name="btn_search">Search</string>
    <string name="release_date">Release Date:</string>
    <string name="title">Title:</string>
    <string name="synopsis">Synopsis:</string>
    <string name="read_more">Read More..</string>
    <string name="language">Language: </string>
    <string name="welcome">Welcome To Movie DB</string>
    <string name="change_language">Change Language</string>
</resources>
