<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/layout_movie"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/img_movie_photo"
            android:layout_width="60dp"
            android:layout_height="70dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/img_movie_photo"
            android:layout_toEndOf="@+id/img_movie_photo"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/movie_title"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/tv_movie_lead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/movie_lead"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tv_movie_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/movie_date"
                android:textSize="16sp"/>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>