<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:src="@mipmap/ic_launcher"
        android:paddingRight="8dp"/>

    <TextView
        android:id="@+id/tv_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:layout_toRightOf="@id/imageView"
        android:layout_toEndOf="@id/imageView"
        android:gravity="center_vertical"
        android:layout_marginBottom="3dp"/>

    <TextView
        android:id="@+id/tv_account_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_mail"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:layout_toEndOf="@id/imageView"
        android:layout_toRightOf="@id/imageView"
        android:layout_below="@id/tv_account_name"
        android:layout_marginBottom="3dp"/>

    <TextView
        android:id="@+id/tv_account_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_phone"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:layout_toEndOf="@id/imageView"
        android:layout_toRightOf="@id/imageView"
        android:layout_below="@id/tv_account_mail" />
</RelativeLayout>
