<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    card_view:cardCornerRadius="4dp">
    <RelativeLayout
        android:id="@+id/layout_movie"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:id="@+id/img_movie_photo"
            android:layout_marginBottom="4dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_toRightOf="@id/img_movie_photo"
            android:layout_toEndOf="@id/img_movie_photo"
            tools:ignore="NotSibling">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="Title"
                android:maxLines="2"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/release_date"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_movie_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Release Date"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
            <TextView
                android:id="@+id/lead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/synopsis"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_movie_lead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                tools:text="Lead"
                android:textColor="@android:color/black"
                android:maxLines="3"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/tv_read_more"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:gravity="bottom"
                android:text="@string/read_more"
                android:textStyle="italic"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>